# stealthkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
scripts/: lint.sh
stealthkit/: __init__.py  agents.py  browser.py  cookies.py  core.py  human.py  pool.py  ratelimit.py  stealth.py
tests/: conftest.py  test_agents.py  test_browser.py  test_cookies.py  test_human.py  test_pool.py  test_ratelimit.py  test_stealth.py
